来单提醒 催单提醒 营业额统计

--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -54,6 +54,8 @@ sky:
     # 阿里云配置
   profiles:
     active: dev    #设置环境
+  shop:
+    address:山东省济南市历下区普利商务中心
 
   alioss:
     endpoint: ${sky.alioss.endpoint}
